--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,7 @@
-# Core dependencies
-textual>=0.41.0
-tree-sitter>=0.20.0
-requests>=2.28.0
-rich>=13.0.0
-
-# Optional image display dependencies
-# These provide image rendering capabilities in the terminal
-textual-image>=0.1.0
-textual-imageview>=0.1.0
-
-# Standard library modules (included with Python)
-# zipfile, re, pickle, os, urllib.request, urllib.parse, webbrowser, pathlib, ctypes
+requests
+rich
+textual
+textual-dev
+textual-image
+textual-imageview
+tree-sitter
